# neuxcfg

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README  README.md
.github/workflows/: rust.yml
examples/: init.rs  list_project.rs  project.rs
src/: atomic.rs  backup.rs  config.rs  error.rs  lib.rs  lock.rs  merge.rs  types.rs  validate.rs
tests/: init.rs  projects.rs
