[package]
name = "neuxcfg"
version = "0.1.2"
edition = "2024"
description = "library for managing an application’s configuration directory."
authors = ["neuxdotdev <neuxdev1@gmail.com>"]
license = "MIT"
repository = "https://github.com/neuxdotdev/neuxcfg"
homepage = "https://github.com/neuxdotdev/neuxcfg"
documentation = "https://docs.rs/neuxcfg"
readme = "README.md"

[dependencies]
dirs = "6.0.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
