[package]
name = "neuxcfg"
version = "0.3.0"
edition = "2024"
description = "library for managing an application’s configuration directory."
authors = ["neuxdotdev <neuxdev1@gmail.com>"]
license = "MIT"
repository = "https://github.com/neuxdotdev/neuxcfg"
homepage = "https://github.com/neuxdotdev/neuxcfg"
documentation = "https://docs.rs/neuxcfg"
readme = "README"

[dependencies]
dirs = "6.0.0"
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.27.0"
